<resources>
    <string name="app_name">FootSalManager</string>
    <string name="text_id">ID</string>
    <string name="text_pw">PW</string>
    <string name="Btn_login">login</string>
    <string name="strID">아이디</string>
    <string name="stroutid">입력한 아이디 출력</string>
    <string name="stroutpw">입력한 비밀번호 출력</string>
    <string name="strback">돌아가기</string>
    <string name="Btn_SignUp">SignUp</string>
    <string name="strPWCheck">비밀번호 확인</string>
    <string name="text_Nickname">닉네임</string>
    <string name="hint_id">아이디를 입력하세요.</string>
    <string name="hint_pw">패스워드를 입력하세요.</string>
    <string name="btn_find">용병 찾기</string>
    <string name="btn_enroll">용병 등록</string>
    <string name="text_name">이름</string>
    <string name="text_phone">전화번호</string>
    <string name="text_city">지역</string>
    <string name="text_ability">실력</string>
    <string name="text_time">시간</string>
    <string name="btn_ok">확인</string>
    <string name="btn_back">취소</string>
    <string name="text_age">연령대</string>
    <string name="text_Date">날짜를 선택해주세요.</string>
    <string name="text_Time">시간을 선택해주세요.</string>
    <string name="text_highAbility">월드클래스</string>
    <string name="text_middleAbility">프로</string>
    <string name="text_lowAbility">아마추어</string>
    <string name="hint_Name">이름을 입력해주세요.</string>
    <string name="hint_Phone">전화번호를 입력해주세요.</string>
    <string name="text_AppName">FootSalManager</string>
    <string name="hint_PWCheck">패스워드를 재입력 해주세요.</string>
    <string name="hint_NickName">닉네임을 입력해 주세요.</string>
    <string name="text_Email">이메일</string>
    <string name="hint_Email">이메일을 입력해 주세요.</string>
    <string-array name="spinner_Do">
        <item>시/도 선택</item>
        <item>서울특별시</item>
        <item>부산광역시</item>
        <item>대구광역시</item>
        <item>인천광역시</item>
        <item>광주광역시</item>
        <item>대전광역시</item>
        <item>울산광역시</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>경상북도</item>
        <item>경상남도</item>
        <item>제주특별자치도</item>
        <item>세종특별자치시</item>
    </string-array>
    <string-array name="spinner_Seoul">
        <item>강남구</item>
        <item>강동구</item>
        <item>강북구</item>
        <item>강서구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>중량구</item>
    </string-array>
    <string-array name="spinner_Busan">
        <item>강서구</item>
        <item>금정구</item>
        <item>남구</item>
        <item>동구</item>
        <item>동래구</item>
        <item>부산진구</item>
        <item>북구</item>
        <item>사상구</item>
        <item>사하구</item>
        <item>서구</item>
        <item>수영구</item>
        <item>연제구</item>
        <item>영도구</item>
        <item>중구</item>
        <item>해운대구</item>
        <item>기장군</item>
    </string-array>
    <string-array name="spinner_Daegu">
        <item>남구</item>
        <item>달서구</item>
        <item>동구</item>
        <item>북구</item>
        <item>수성구</item>
        <item>중구</item>
        <item>달성군</item>
    </string-array>
    <string-array name="spinner_Incheon">
        <item>계양구</item>
        <item>남동구</item>
        <item>동구</item>
        <item>미추홀구</item>
        <item>부평구</item>
        <item>서구</item>
        <item>연수구</item>
        <item>중구</item>
        <item>강화군</item>
        <item>옹진군</item>
    </string-array>
    <string-array name="spinner_Gwangju">
        <item>광산구</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>서구</item>
    </string-array>
    <string-array name="spinner_Daejeon">
        <item>대덕구</item>
        <item>동구</item>
        <item>서구</item>
        <item>유성구</item>
        <item>중구</item>
    </string-array>
    <string-array name="spinner_Ulsan">
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>중구</item>
        <item>울주군</item>
    </string-array>
    <string-array name="spinner_Sejong">
        <item>조치원읍</item>
        <item>금남면</item>
        <item>부강면</item>
        <item>소정면</item>
        <item>연기면</item>
        <item>연동면</item>
        <item>연서면</item>
        <item>장군면</item>
        <item>전동면</item>
        <item>전의면</item>
        <item>고운동</item>
        <item>대평동</item>
        <item>도담동</item>
        <item>보람동</item>
        <item>소담동</item>
        <item>새롬동</item>
        <item>아름동</item>
        <item>종촌동</item>
        <item>한솔동</item>
    </string-array>
    <string-array name="spinner_Gyeonggi">
        <item>고양시</item>
        <item>과천시</item>
        <item>광명시</item>
        <item>광주시</item>
        <item>구리시</item>
        <item>군포시</item>
        <item>김포시</item>
        <item>남양주시</item>
        <item>동두천시</item>
        <item>부천시</item>
        <item>성남시</item>
        <item>수원시</item>
        <item>시흥시</item>
        <item>안산시</item>
        <item>안성시</item>
        <item>안양시</item>
        <item>양주시</item>
        <item>여주시</item>
        <item>오산시</item>
        <item>용인시</item>
        <item>의왕시</item>
        <item>의정부시</item>
        <item>이천시</item>
        <item>파주시</item>
        <item>평택시</item>
        <item>포천시</item>
        <item>하남시</item>
        <item>화성시</item>
        <item>가평군</item>
        <item>양평군</item>
        <item>연천군</item>
    </string-array>
    <string-array name="spinner_Gangwon">
        <item>강릉시</item>
        <item>동해시</item>
        <item>삼척시</item>
        <item>속초시</item>
        <item>원주시</item>
        <item>춘천시</item>
        <item>태백시</item>
        <item>고성군</item>
        <item>양구군</item>
        <item>양양군</item>
        <item>영월군</item>
        <item>인제군</item>
        <item>정선군</item>
        <item>철원군</item>
        <item>평창군</item>
        <item>홍천군</item>
        <item>화천군</item>
        <item>횡성군</item>
    </string-array>
    <string-array name="spinner_Chungbuk">
        <item>제천시</item>
        <item>청주시</item>
        <item>충주시</item>
        <item>괴산군</item>
        <item>단양군</item>
        <item>보은군</item>
        <item>영동군</item>
        <item>옥천군</item>
        <item>음성군</item>
        <item>증평군</item>
        <item>진천군</item>
    </string-array>
    <string-array name="spinner_Chungnam">
        <item>계룡시</item>
        <item>공주시</item>
        <item>논산시</item>
        <item>당진시</item>
        <item>보령시</item>
        <item>서산시</item>
        <item>아산시</item>
        <item>천안시</item>
        <item>금산군</item>
        <item>부여군</item>
        <item>서천군</item>
        <item>예산군</item>
        <item>청양군</item>
        <item>태안군</item>
        <item>홍성군</item>
    </string-array>
    <string-array name="spinner_Jeonbuk">
        <item>군산시</item>
        <item>김제시</item>
        <item>남원시</item>
        <item>익산시</item>
        <item>전주시</item>
        <item>정읍시</item>
        <item>고창군</item>
        <item>무주군</item>
        <item>부안군</item>
        <item>순창군</item>
        <item>완주군</item>
        <item>임실군</item>
        <item>장수군</item>
        <item>진안군</item>
    </string-array>
    <string-array name="spinner_Jeonnam">
        <item>광양시</item>
        <item>나주시</item>
        <item>목포시</item>
        <item>순천시</item>
        <item>여수시</item>
        <item>강진군</item>
        <item>고흥군</item>
        <item>곡성군</item>
        <item>구례군</item>
        <item>담양군</item>
        <item>무안군</item>
        <item>보성군</item>
        <item>신안군</item>
        <item>영광군</item>
        <item>여암군</item>
        <item>완도군</item>
        <item>장성군</item>
        <item>장흥군</item>
        <item>진도군</item>
        <item>함평군</item>
        <item>해남군</item>
        <item>화순군</item>
    </string-array>
    <string-array name="spinner_Gyeongbuk">
        <item>경산시</item>
        <item>경주시</item>
        <item>구미시</item>
        <item>김천시</item>
        <item>문경시</item>
        <item>상주시</item>
        <item>안동시</item>
        <item>영주시</item>
        <item>영천시</item>
        <item>포항시</item>
        <item>고령군</item>
        <item>군위군</item>
        <item>봉화군</item>
        <item>영덕군</item>
        <item>영양군</item>
        <item>예천군</item>
        <item>울릉군</item>
        <item>울진군</item>
        <item>의성군</item>
        <item>청도군</item>
        <item>청송군</item>
        <item>칠곡군</item>
    </string-array>
    <string-array name="spinner_Gyeongnam">
        <item>거제시</item>
        <item>김해시</item>
        <item>밀양시</item>
        <item>사천시</item>
        <item>양산시</item>
        <item>진주시</item>
        <item>창원시</item>
        <item>통영시</item>
        <item>거창군</item>
        <item>고성군</item>
        <item>남해군</item>
        <item>산청군</item>
        <item>의령군</item>
        <item>창녕군</item>
        <item>하동군</item>
        <item>함안군</item>
        <item>함양군</item>
        <item>합천군</item>
    </string-array>
    <string-array name="spinner_Jeju">
        <item>서귀포시</item>
        <item>제주시</item>
    </string-array>
    <string-array name="spinner_Empty">
        <item>시/군/구 선택</item>
    </string-array>
    <string name="strpw">패스워드</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_MyPage">개인정보</string>
    <string name="nav_Info">앱정보</string>
    <string name="nav_Logout">로그아웃</string>
    <string name="text_MyPage">MyPage</string>
    <string name="text_Welcome">님 환영합니다!</string>
    <string name="Viewer">text_Viewer</string>
    <string name="text_Viewer">Viewer</string>
    <string name="btn_Search">검색</string>
    <string name="hint_anything">즐겁게 공 차실 분 구해요~</string>
    <string name="btn_Stadium">내 근처 풋살장</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_FindField">Find Field</string>
    <string name="text_Map">Map</string>
    <string name="text_Date2">날짜</string>
    <string name="text_SignUp">회원가입</string>
</resources>
