<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a7843d2ee5ae7d9e293dfa55a37c8e3e"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="80dp"
        android:background="@android:color/transparent"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/strID"

            />

        <EditText
            android:id="@+id/txt_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_id"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strpw"

            />

        <EditText
            android:id="@+id/txt_PW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_pw"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Btnlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Login"
            style="@style/Animation.AppCompat.DropDownUp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/Btn_login"
            android:textColor="@android:color/background_light"

            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:text="@string/Btn_SignUp"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>