<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a7843d2ee5ae7d9e293dfa55a37c8e3e"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/Btn_SignUp"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strID"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/txt_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/strpw" />

        <EditText
            android:id="@+id/txt_PW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/strPWCheck" />

        <EditText
            android:id="@+id/txt_PWCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/text_Nickname" />

        <EditText
            android:id="@+id/txt_NickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/text_Email" />

        <EditText
            android:id="@+id/txt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_OK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:text="@string/text_SignUp"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:text="@string/strback"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>