<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a7843d2ee5ae7d9e293dfa55a37c8e3e"
    android:orientation="vertical"
    tools:context=".Activity.EnrollActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_NickName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:text="@string/text_Nickname"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_age"
                android:textSize="20sp"
                android:textColor="@android:color/background_light" />

            <Spinner
                android:id="@+id/spinner_Age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/text_Date"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:ems="10"
                android:autofillHints="@string/btn_back"
                android:hint="@string/text_Date"
                android:inputType="date"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />

            <EditText
                android:id="@+id/text_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:hint="@string/text_Time"
                android:inputType="time"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_ability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/text_ability"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/group_Skill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_High"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_highAbility"
                    android:textSize="15sp"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />

                <RadioButton
                    android:id="@+id/rb_Middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_middleAbility"
                    android:textSize="15sp"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />

                <RadioButton
                    android:id="@+id/rb_Low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_lowAbility"
                    android:textSize="15sp"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/text_city"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_Do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/app_name" />

            <Spinner
                android:id="@+id/spinner_Si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/hint_Phone"
                android:inputType="phone"
                android:maxLength="13"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/text_contents"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_anything"
                android:inputType="textMultiLine"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/background_light" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_ok"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_back"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>