<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/text_Viewer"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image_Delete"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:padding="9dp"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_User"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@mipmap/baseline_account_circle_black_48" />

        <TextView
            android:id="@+id/text_NickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/text_Nickname"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:singleLine="false"
            android:text="@string/text_phone"
            android:textColor="@android:color/black"
            android:textIsSelectable="false"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:text="@string/text_age" />

        <TextView
            android:id="@+id/text_Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:text="@string/text_ability" />

        <TextView
            android:id="@+id/text_Skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:text="TextView" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_Area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/text_city" />

    <TextView
        android:id="@+id/text_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_time"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/text_Contents"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

</LinearLayout>